most of the colors are branded

--- a/ocp_draft/stylesheets/framework.css
+++ b/ocp_draft/stylesheets/framework.css
@@ -1456,8 +1456,8 @@ select {
   padding: 1rem 1.71429rem 1rem 1rem;
   font-size: 0.92857rem;
   transition: opacity 300ms ease-out;
-  background-color: #F9CE06;
-  border-color: #d6b105;
+  background-color: #5dd6ee;
+  border-color: #3acfed;
   color: #FFFFFF;
 }
 .alert-box .close {
@@ -1943,13 +1943,13 @@ select {
   font-size: 0.78571rem;
   line-height: 0.78571rem;
   text-transform: uppercase;
-  color: #F9CE06;
+  color: #5dd6ee;
 }
 .breadcrumbs > *:hover a, .breadcrumbs > *:focus a {
   text-decoration: underline;
 }
 .breadcrumbs > * a {
-  color: #F9CE06;
+  color: #5dd6ee;
 }
 .breadcrumbs > *.current {
   cursor: default;
@@ -2010,13 +2010,12 @@ button, .button {
   padding-bottom: 0.92857rem;
   padding-left: 1.71429rem;
   font-size: 1.14286rem;
-  background-color: #F9CE06;
-  border-color: #F9CE06;
+  background-color: #5dd6ee;
   color: #FFFFFF;
   transition: background-color 300ms ease-out;
 }
 button:hover, button:focus, .button:hover, .button:focus {
-  background-color: #c7a505;
+  background-color: #5dd6ee;
 }
 button:hover, button:focus, .button:hover, .button:focus {
   color: #FFFFFF;
@@ -2033,23 +2032,23 @@ button.secondary:hover, button.secondary:focus, .button.secondary:hover, .button
   color: #333333;
 }
 button.success, .button.success {
-  background-color: #43AC6A;
-  border-color: #368a55;
+  background-color: #2e3094;
+  border-color: #2e3094;
   color: #FFFFFF;
 }
 button.success:hover, button.success:focus, .button.success:hover, .button.success:focus {
-  background-color: #368a55;
+  background-color: #2e3094;
 }
 button.success:hover, button.success:focus, .button.success:hover, .button.success:focus {
   color: #FFFFFF;
 }
 button.alert, .button.alert {
   background-color: #f04124;
-  border-color: #cf2a0e;
+  border-color: #5dd6ee;
   color: #FFFFFF;
 }
 button.alert:hover, button.alert:focus, .button.alert:hover, .button.alert:focus {
-  background-color: #cf2a0e;
+  background-color: #5dd6ee;
 }
 button.alert:hover, button.alert:focus, .button.alert:hover, .button.alert:focus {
   color: #FFFFFF;
@@ -2117,21 +2116,21 @@ button.round, .button.round {
   border-radius: 1000px;
 }
 button.disabled, button[disabled], .button.disabled, .button[disabled] {
-  background-color: #F9CE06;
-  border-color: #F9CE06;
+  background-color: #5dd6ee;
+  border-color: #5dd6ee;
   color: #FFFFFF;
   cursor: default;
   opacity: 0.7;
   box-shadow: none;
 }
 button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
-  background-color: #c7a505;
+  background-color: #5dd6ee;
 }
 button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
   color: #FFFFFF;
 }
 button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
-  background-color: #F9CE06;
+  background-color: #5dd6ee;
 }
 button.disabled.secondary, button[disabled].secondary, .button.disabled.secondary, .button[disabled].secondary {
   background-color: #e7e7e7;
@@ -2152,14 +2151,14 @@ button.disabled.secondary:hover, button.disabled.secondary:focus, button[disable
 }
 button.disabled.success, button[disabled].success, .button.disabled.success, .button[disabled].success {
   background-color: #43AC6A;
-  border-color: #368a55;
+  border-color: #2e3094;
   color: #FFFFFF;
   cursor: default;
   opacity: 0.7;
   box-shadow: none;
 }
 button.disabled.success:hover, button.disabled.success:focus, button[disabled].success:hover, button[disabled].success:focus, .button.disabled.success:hover, .button.disabled.success:focus, .button[disabled].success:hover, .button[disabled].success:focus {
-  background-color: #368a55;
+  background-color: #2e3094;
 }
 button.disabled.success:hover, button.disabled.success:focus, button[disabled].success:hover, button[disabled].success:focus, .button.disabled.success:hover, .button.disabled.success:focus, .button[disabled].success:hover, .button[disabled].success:focus {
   color: #FFFFFF;
@@ -2169,14 +2168,14 @@ button.disabled.success:hover, button.disabled.success:focus, button[disabled].s
 }
 button.disabled.alert, button[disabled].alert, .button.disabled.alert, .button[disabled].alert {
   background-color: #f04124;
-  border-color: #cf2a0e;
+  border-color: #5dd6ee;
   color: #FFFFFF;
   cursor: default;
   opacity: 0.7;
   box-shadow: none;
 }
 button.disabled.alert:hover, button.disabled.alert:focus, button[disabled].alert:hover, button[disabled].alert:focus, .button.disabled.alert:hover, .button.disabled.alert:focus, .button[disabled].alert:hover, .button[disabled].alert:focus {
-  background-color: #cf2a0e;
+  background-color: #5dd6ee;
 }
 button.disabled.alert:hover, button.disabled.alert:focus, button[disabled].alert:hover, button[disabled].alert:focus, .button.disabled.alert:hover, .button.disabled.alert:focus, .button[disabled].alert:hover, .button[disabled].alert:focus {
   color: #FFFFFF;
@@ -3764,7 +3763,7 @@ label.error {
   color: #FFFFFF;
 }
 .icon-bar > a:hover {
-  background: #F9CE06;
+  background: #5dd6ee;
 }
 .icon-bar > a:hover label {
   color: #FFFFFF;
@@ -3773,7 +3772,7 @@ label.error {
   color: #FFFFFF;
 }
 .icon-bar > a.active {
-  background: #F9CE06;
+  background: #5dd6ee;
 }
 .icon-bar > a.active label {
   color: #FFFFFF;
@@ -4086,7 +4085,7 @@ kbd {
   margin-bottom: auto;
   padding: 0.28571rem 0.57143rem 0.28571rem;
   font-size: 0.78571rem;
-  background-color: #F9CE06;
+  background-color: #5dd6ee;
   color: #FFFFFF;
 }
 .label.radius {
@@ -4460,13 +4459,13 @@ ul.pagination li.unavailable:hover a, ul.pagination li.unavailable a:focus, ul.p
   background: transparent;
 }
 ul.pagination li.current a, ul.pagination li.current button {
-  background: #F9CE06;
+  background: #5dd6ee;
   color: #FFFFFF;
   font-weight: bold;
   cursor: default;
 }
 ul.pagination li.current a:hover, ul.pagination li.current a:focus, ul.pagination li.current button:hover, ul.pagination li.current button:focus {
-  background: #F9CE06;
+  background: #5dd6ee;
 }
 ul.pagination li {
   float: left;
@@ -4534,10 +4533,10 @@ ul.pagination li {
   line-height: 1.4;
 }
 .panel.callout a:not(.button) {
-  color: #F9CE06;
+  color: #5dd6ee;
 }
 .panel.callout a:not(.button):hover, .panel.callout a:not(.button):focus {
-  color: #d6b105;
+  color: #3acfed;
 }
 .panel.radius {
   border-radius: 3px;
@@ -4605,7 +4604,7 @@ ul.pagination li {
   margin-bottom: 0.71429rem;
 }
 .progress .meter {
-  background: #F9CE06;
+  background: #5dd6ee;
   height: 100%;
   display: block;
 }
@@ -4677,7 +4676,7 @@ ul.pagination li {
   border-radius: 3px;
 }
 .range-slider.radius .range-slider-handle {
-  background: #F9CE06;
+  background: #5dd6ee;
   border-radius: 3px;
 }
 .range-slider.radius .range-slider-handle:hover {
@@ -4688,7 +4687,7 @@ ul.pagination li {
   border-radius: 1000px;
 }
 .range-slider.round .range-slider-handle {
-  background: #F9CE06;
+  background: #5dd6ee;
   border-radius: 1000px;
 }
 .range-slider.round .range-slider-handle:hover {
@@ -4700,7 +4699,7 @@ ul.pagination li {
   opacity: 0.7;
 }
 .range-slider.disabled .range-slider-handle, .range-slider[disabled] .range-slider-handle {
-  background: #F9CE06;
+  background: #5dd6ee;
   cursor: default;
   opacity: 0.7;
 }
@@ -4726,7 +4725,7 @@ ul.pagination li {
   cursor: pointer;
   -ms-touch-action: manipulation;
   touch-action: manipulation;
-  background: #F9CE06;
+  background: #5dd6ee;
 }
 .range-slider-handle:hover {
   background: #dbb505;
@@ -4911,7 +4910,7 @@ dialog[open] {
 }
 .side-nav li a:not(.button) {
   display: block;
-  color: #F9CE06;
+  color: #5dd6ee;
   margin: 0;
   padding: 0.5rem 1rem;
 }
@@ -4932,7 +4931,7 @@ dialog[open] {
   border-top-color: white;
 }
 .side-nav li.heading {
-  color: #F9CE06;
+  color: #5dd6ee;
   font-size: 1rem;
   font-weight: bold;
   text-transform: uppercase;
@@ -5084,7 +5083,7 @@ dialog[open] {
 .sub-nav li.active a {
   border-radius: 3px;
   font-weight: normal;
-  background: #F9CE06;
+  background: #5dd6ee;
   padding: 0.21429rem 1.14286rem;
   cursor: default;
   color: #FFFFFF;
@@ -5092,7 +5091,7 @@ dialog[open] {
 .sub-nav dt.active a:hover,
 .sub-nav dd.active a:hover,
 .sub-nav li.active a:hover {
-  background: #d6b105;
+  background: #3acfed;
 }
 
 .switch {
@@ -5146,7 +5145,7 @@ dialog[open] {
   transform: translate3d(0, 0, 0);
 }
 .switch input:checked + label {
-  background: #F9CE06;
+  background: #5dd6ee;
 }
 .switch input:checked + label:after {
   left: 2.25rem;
@@ -5170,7 +5169,7 @@ dialog[open] {
   background: #FFFFFF;
 }
 .switch input:checked + label {
-  background: #F9CE06;
+  background: #5dd6ee;
 }
 .switch.large label {
   width: 5rem;
@@ -5402,7 +5401,7 @@ table tr td {
 }
 .has-tip:hover, .has-tip:focus {
   border-bottom: dotted 1px #705d03;
-  color: #F9CE06;
+  color: #5dd6ee;
 }
 .has-tip.tip-left, .has-tip.tip-right {
   float: none !important;
@@ -5447,7 +5446,7 @@ table tr td {
   left: 2rem;
 }
 .tooltip.opened {
-  color: #F9CE06 !important;
+  color: #5dd6ee !important;
   border-bottom: dotted 1px #705d03 !important;
 }
 
@@ -5666,7 +5665,7 @@ meta.foundation-mq-topbar {
   color: #999;
   padding: 12px 0 12px 0;
   padding-left: 1.42857rem;
-  font-family: Raleway, "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "cabin",Arial,sans-serif/*{ffDefault}*/;
   font-size: 1rem;
   font-weight: normal;
   text-transform: uppercase;
@@ -5675,12 +5674,12 @@ meta.foundation-mq-topbar {
   font-size: 1rem;
   padding-right: 1.42857rem;
   padding-left: 1.42857rem;
-  background-color: #F9CE06;
-  border-color: #F9CE06;
+  background-color: #5dd6ee;
+  border-color: #5dd6ee;
   color: #FFFFFF;
 }
 .top-bar-section ul li > a.button:hover, .top-bar-section ul li > a.button:focus {
-  background-color: #c7a505;
+  background-color: #5dd6ee;
 }
 .top-bar-section ul li > a.button:hover, .top-bar-section ul li > a.button:focus {
   color: #FFFFFF;
@@ -5698,22 +5697,22 @@ meta.foundation-mq-topbar {
 }
 .top-bar-section ul li > a.button.success {
   background-color: #43AC6A;
-  border-color: #368a55;
+  border-color: #2e3094;
   color: #FFFFFF;
 }
 .top-bar-section ul li > a.button.success:hover, .top-bar-section ul li > a.button.success:focus {
-  background-color: #368a55;
+  background-color: #2e3094;
 }
 .top-bar-section ul li > a.button.success:hover, .top-bar-section ul li > a.button.success:focus {
   color: #FFFFFF;
 }
 .top-bar-section ul li > a.button.alert {
   background-color: #f04124;
-  border-color: #cf2a0e;
+  border-color: #5dd6ee;
   color: #FFFFFF;
 }
 .top-bar-section ul li > a.button.alert:hover, .top-bar-section ul li > a.button.alert:focus {
-  background-color: #cf2a0e;
+  background-color: #5dd6ee;
 }
 .top-bar-section ul li > a.button.alert:hover, .top-bar-section ul li > a.button.alert:focus {
   color: #FFFFFF;
@@ -5733,12 +5732,12 @@ meta.foundation-mq-topbar {
   font-size: 1rem;
   padding-right: 1.42857rem;
   padding-left: 1.42857rem;
-  background-color: #F9CE06;
-  border-color: #F9CE06;
+  background-color: #5dd6ee;
+  border-color: #5dd6ee;
   color: #FFFFFF;
 }
 .top-bar-section ul li > button:hover, .top-bar-section ul li > button:focus {
-  background-color: #c7a505;
+  background-color: #5dd6ee;
 }
 .top-bar-section ul li > button:hover, .top-bar-section ul li > button:focus {
   color: #FFFFFF;
@@ -5756,22 +5755,22 @@ meta.foundation-mq-topbar {
 }
 .top-bar-section ul li > button.success {
   background-color: #43AC6A;
-  border-color: #368a55;
+  border-color: #2e3094;
   color: #FFFFFF;
 }
 .top-bar-section ul li > button.success:hover, .top-bar-section ul li > button.success:focus {
-  background-color: #368a55;
+  background-color: #2e3094;
 }
 .top-bar-section ul li > button.success:hover, .top-bar-section ul li > button.success:focus {
   color: #FFFFFF;
 }
 .top-bar-section ul li > button.alert {
   background-color: #f04124;
-  border-color: #cf2a0e;
+  border-color: #5dd6ee;
   color: #FFFFFF;
 }
 .top-bar-section ul li > button.alert:hover, .top-bar-section ul li > button.alert:focus {
-  background-color: #cf2a0e;
+  background-color: #5dd6ee;
 }
 .top-bar-section ul li > button.alert:hover, .top-bar-section ul li > button.alert:focus {
   color: #FFFFFF;
@@ -6034,8 +6033,8 @@ meta.foundation-mq-topbar {
     background: #333333;
   }
   .top-bar-section .dropdown li:not(.has-form):not(.active) > a:not(.button) {
-    color: #ccc;
-    background: #333333;
+    color: white;
+    background: #124468;
   }
   .top-bar-section .dropdown li:not(.has-form):not(.active):hover > a:not(.button) {
     color: #fff;
@@ -6318,12 +6317,12 @@ td {
 
 /* Default Link Styles */
 a {
-  color: #F9CE06;
+  color: #5dd6ee;
   text-decoration: none;
   line-height: inherit;
 }
 a:hover, a:focus {
-  color: #d6b105;
+  color: #3acfed;
 }
 a img {
   border: none;
