--- a/ocp_draft/stylesheets/style.css
+++ b/ocp_draft/stylesheets/style.css
@@ -839,7 +839,6 @@ ul.shortcode-list i {
 
 /*Button styles */
 .button {
-  text-transform: uppercase;
   letter-spacing: 1px;
   color: #fff;
   background: #124468;
@@ -868,6 +867,13 @@ ul.shortcode-list i {
 .top-bar .title-area .name h1 a {
   font-size: 2.57143rem;
   color: #333;
+}
+.gradientbg{
+		/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&0.85+0,0+100 */
+	background: -moz-linear-gradient(left, rgba(255,255,255,0.85) 0%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(left, rgba(255,255,255,0.85) 0%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to right, rgba(255,255,255,0.85) 0%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d9ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 */
 }
 
 .contain-to-grid {
@@ -1199,9 +1205,6 @@ form input.error, form textarea.error {
   background: #124468;
   color: white;
 }
-/*.whitebg {
-	background: white;
-}*/
 #footer h1 {
   margin-bottom: 25px;
 }
