--- a/ocp_draft/stylesheets/framework.css
+++ b/ocp_draft/stylesheets/framework.css
@@ -1,4 +1,4 @@
-meta.foundation-version {
+button, .buttonmeta.foundation-version {
   font-family: "/5.5.0/";
 }
 
@@ -1998,7 +1998,7 @@ button, .button {
   font-family: Raleway, "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   line-height: normal;
-  margin: 0 0 1.42857rem;
+  margin: 0 0 25px;
   position: relative;
   text-decoration: none;
   text-align: center;
@@ -5490,7 +5490,7 @@ meta.foundation-mq-topbar {
   width: 50em;
 }
 
-/* Wrapped around .top-bar to contain to grid width */
+/* Wrapped around .top-bar to contain to grid width red */
 .contain-to-grid {
   width: 100%;
   background: #fff;
@@ -5604,7 +5604,7 @@ meta.foundation-mq-topbar {
   height: 34px;
   line-height: 33px;
   padding: 0 3.21429rem 0 1.42857rem;
-  color: #999;
+  color: #124468;
   position: relative;
 }
 .top-bar .toggle-topbar.menu-icon a span::after {
@@ -5662,7 +5662,7 @@ meta.foundation-mq-topbar {
 .top-bar-section ul li > a {
   display: block;
   width: 100%;
-  color: #999;
+  color: #124468;
   padding: 12px 0 12px 0;
   padding-left: 1.42857rem;
   font-family: "cabin",Arial,sans-serif/*{ffDefault}*/;
@@ -5952,17 +5952,17 @@ meta.foundation-mq-topbar {
   .top-bar-section li:not(.has-form) a:not(.button) {
     padding: 0 1.42857rem;
     line-height: 7.14286rem;
-    background: #fff;
   }
   .top-bar-section li:not(.has-form) a:not(.button):hover {
-    background-color: #555555;
-    background: #f9f9f9;
+    background-color: #124468;
+    background: #124468;
+    color:white;
   }
   .top-bar-section li.active:not(.has-form) a:not(.button) {
     padding: 0 1.42857rem;
     line-height: 7.14286rem;
-    color: #888;
-    background: #f9f9f9;
+    color: white;
+    background: #124468;
   }
   .top-bar-section li.active:not(.has-form) a:not(.button):hover {
     background: #f2f2f2;
@@ -6037,9 +6037,8 @@ meta.foundation-mq-topbar {
     background: #124468;
   }
   .top-bar-section .dropdown li:not(.has-form):not(.active):hover > a:not(.button) {
-    color: #fff;
-    background-color: #555555;
-    background: #444;
+    color: #124468;
+    background-color: #5dd6ee;
   }
   .top-bar-section .dropdown li label {
     white-space: nowrap;
