about page branded

--- a/ocp_draft/stylesheets/framework.css
+++ b/ocp_draft/stylesheets/framework.css
@@ -6345,6 +6345,9 @@ p aside {
   line-height: 1.35;
   font-style: italic;
 }
+.darkertext{
+  color:black;
+}
 
 /* Default header styles */
 h1, h2, h3, h4, h5, h6 {
@@ -6356,6 +6359,9 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 1.07143rem;
   line-height: 1.4;
+}
+.headerwhite {
+  color:white;
 }
 h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
   font-size: 60%;
