--- a/ocp_draft/stylesheets/style.css
+++ b/ocp_draft/stylesheets/style.css
@@ -3715,7 +3715,7 @@ body {
   font-family: "cabin",Arial,sans-serif/*{ffDefault}*/;
   font-size: 20px;
   line-height: 1;
-  color: white;
+  color: black;
   opacity: 0.75;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
